# chorus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
.superpowers/sdd/: final-fix-report.md
chorus/: __init__.py
chorus/agent/: __init__.py  loop.py  openai_tools.py  prompts.py
chorus/api/: __init__.py  main.py
chorus/api/auth/: __init__.py  principal.py
chorus/api/routers/: __init__.py  agent.py  config.py  health.py  ingestion.py  stats.py  tools.py
chorus/audit/: __init__.py  logger.py  schema.sql
chorus/db/: __init__.py  neo4j.py
chorus/inference/: __init__.py  ner_client.py  provider.py
chorus/ingestion/: __init__.py  adapter.py  cli.py  comments.py  connections.py  extraction.py  jobs.py  messages.py  orchestrator.py  postings.py  profiles.py  raw_store.py  resolution.py  upstream.py
chorus/migrations/: 001_constraints.cypher  002_indexes.cypher  003_vector_indexes.cypher  004_alias_norm_key.cypher  __init__.py  cli.py  runner.py
chorus/queries/: __init__.py  author_activity_summary.cypher  authors_connected_by_topic.cypher  authors_mentioning.cypher  expand_network_node.cypher  expand_social_node.cypher  network_around.cypher  posts_mentioning.cypher  social_network_around.cypher  stats.cypher  topic_co_occurrence.cypher
chorus/tools/: __init__.py  _audit.py  _template_loader.py  author_activity_summary.py  authors_connected_by_topic.py  authors_mentioning.py  expand_network_node.py  expand_social_node.py  network_around.py  posts_mentioning.py  social_network_around.py  topic_co_occurrence.py
chorus/ui/: __init__.py  client.py  network_dot.py  social_network_dot.py  streamlit_app.py
chorus/ui/pages/: 00_agent.py  01_data_ingestion.py  01_posts_mentioning.py  02_author_activity_summary.py  03_author_activity_summary.py  03_topic_co_occurrence.py  04_authors_connected_by_topic.py  04_topic_co_occurrence.py  05_authors_connected_by_topic.py  05_authors_mentioning.py  06_network_around.py  07_data_ingestion.py  07_network_around.py  08_social_network_around.py  __init__.py
chorus/utils/: __init__.py  env_cfg.py  logger_cfg.py  ui_strings.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ui  compose.override.yaml  compose.yaml
docs/: airgap.md  architecture.md  compliance.md  retention.md
docs/decisions/: 0001-package-layout.md  0002-deferred-connections-schema.md  0003-vectors-in-neo4j.md  0004-python-3.12.md  0005-gliner-via-litellm.md  0006-profiles-table.md  0007-connections-schema.md  0008-message-sender-identity.md  0009-agent-tool-calling.md  0010-resolution-audit-logging.md  0011-retention-anchored-on-ingested-at.md  0012-durable-alias-norm-key.md  0013-response-language-localization.md  0014-frontend-ingestion.md  0015-react-spa-frontend.md  0016-forcegraph-and-incremental-expansion.md
docs/superpowers/plans/: 2026-05-29-graph-query-tools.md  2026-05-30-entity-resolution.md  2026-06-04-authors-mentioning-tool.md  2026-06-04-network-around-tool.md  2026-06-05-response-language-german-mode.md  2026-06-20-landing-dashboard.md  2026-06-20-react-spa-frontend.md  2026-07-18-expand-tools-backend.md  2026-07-18-forcegraph-infra-ui.md  2026-07-18-reactive-graph-frontend.md  2026-07-19-expandactions-infra-ui.md  2026-07-19-unified-explorer-chorus.md
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/nginx/: default.conf.template  security-headers.conf
frontend/src/: App.tsx  main.tsx
scripts/: build_wheelhouse.sh  bundle_images.sh  check_dataplane_health.sh
tests/: __init__.py  conftest.py  test_frontend_proxy_config.py
tests/agent/: __init__.py  test_agent_router.py  test_loop.py  test_prompts.py
tests/api/: __init__.py  test_config.py  test_metrics.py  test_version.py
tests/audit/: __init__.py  test_logger.py
tests/inference/: __init__.py  test_ner_client.py  test_provider_chat_message.py  test_provider_stub.py
tests/ingestion/: __init__.py  _fakes.py  test_cli.py  test_connections.py  test_dto_parsing.py  test_extraction.py  test_file_adapter.py  test_filename_validation.py  test_ingestion_router.py  test_jobs.py  test_messages.py  test_orchestrator_stub.py  test_profiles.py  test_raw_store.py  test_resolution.py
tests/integration/: __init__.py  test_author_activity_summary.py  test_authors_connected_by_topic.py  test_authors_mentioning.py  test_expand_network_node.py  test_expand_social_node.py  test_migrations.py  test_network_around.py  test_posts_mentioning.py  test_resolution_e2e.py  test_social_network_around.py  test_stats.py  test_topic_co_occurrence.py
tests/tools/: __init__.py  test_registry.py
tests/ui/: __init__.py  test_client_ingestion.py  test_frontend_image_surface.py  test_network_dot.py  test_social_network_dot.py  test_ui_strings_usage.py
tests/utils/: __init__.py  test_env_cfg.py  test_language_config.py  test_ui_strings.py
(+101 files in other folders)
