[project]
name = "chorus"
version = "0.1.0"
description = "GraphRAG system for social network analysis"
authors = [
  { name = "nos-tromo" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "neo4j>=6.2.0",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chorus"]

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff==0.15.14",
    "testcontainers[neo4j]>=4.14.2",
]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (chorus floors at py311). Drift fails CI.
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Mirrors nos-tromo/.github/configs/python-strict/mypy.ini. Drift fails CI.
strict = true
ignore_missing_imports = true
no_incremental = true
