[project]
name = "chorus"
version = "0.1.0"
description = "GraphRAG system for social network analysis"
authors = [
  { name = "nos-tromo" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "neo4j>=6.2.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chorus"]

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff==0.15.14",
    "testcontainers[neo4j]>=4.14.2",
]
# Frontend-only runtime deps, kept out of [project.dependencies] so the UI
# image and the API image stay disjoint. The UI image installs *only* this
# group (`uv sync --only-group frontend`) and none of the backend libraries
# (neo4j, openai, fastapi, …). `httpx` and `python-dotenv` are also base
# dependencies; they are restated here because `--only-group` omits base
# dependencies while the copied UI/utils modules still import them.
frontend = [
    "streamlit>=1.58.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[tool.uv]
# `frontend` is a default group so a plain `uv sync` (local dev) and
# `uv export` keep Streamlit available. The UI Docker image overrides this
# with `--only-group frontend`; a future slim API image can drop both groups
# with `--no-default-groups`.
default-groups = ["dev", "frontend"]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (chorus floors at py311). Drift fails CI.
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Mirrors nos-tromo/.github/configs/python-strict/mypy.ini. Drift fails CI.
strict = true
ignore_missing_imports = true
no_incremental = true
